--- a/app/(client)/styles/globals.css
+++ b/app/(client)/styles/globals.css
@@ -75,7 +75,7 @@
     }
 
     .link {
-        @apply text-dark-grey hover:text-black hover:bg-grey p-3 px-4 block opacity-75;
+        @apply text-dark-grey hover:text-black hover:bg-grey/50 p-3 px-4 block;
     }
 
     .hide {
